--- a/PRACTICE/CHALLENGES/DEVELOPER SKILLS & EDITOR SETUPS PRACTICES/CHALLENGE-1/index.html
+++ b/PRACTICE/CHALLENGES/DEVELOPER SKILLS & EDITOR SETUPS PRACTICES/CHALLENGE-1/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>question-2</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Challenge-1</title>
+    <style>
+      h1 {
+        text-transform: uppercase;
+        background: black;
+        color: white;
+        border-radius: 20px;
+        font: 900;
+        font-size: 2rem;
+        padding: 30px;
+        width: 380px;
+      }
+    </style>
+  </head>
+  <body>
     <script src="./index.js"></script>
-</body>
+    <marquee behavior="smooth" direction="left" scrollamount="25">
+      <h1>use 4 step framwork</h1>
+    </marquee>
+  </body>
 </html>
