update file structuring

--- a/CLASS/5. Js Data Structures/SESSION 22/Destructuring Array & Objects/index.html
+++ b/CLASS/5. Js Data Structures/SESSION 22/Destructuring Array & Objects/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./script.js"></script>
+    <script src="./1array.js"></script>
+    <!-- <script src="./2object.js"></script> -->
   </body>
 </html>
