--- a/PRACTICE/CHALLENGES/JS DATA STRUCTURE CHALLENGES/CHALLENGE-1/index.html
+++ b/PRACTICE/CHALLENGES/JS DATA STRUCTURE CHALLENGES/CHALLENGE-1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1> <marquee behavior="smooth" direction="left" scrollamount= '20'>ASSIGNMENT-1</marquee></h1>
     <script src="./script.js"></script>
   </body>
 </html>
