--- a/PRACTICE/ASSIGNMENT/2. JS DATA STRUCTURE ASSIGNMENT/ASS-2/index.html
+++ b/PRACTICE/ASSIGNMENT/2. JS DATA STRUCTURE ASSIGNMENT/ASS-2/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>
-      <marquee behavior="smooth" direction="left" scrollamount="25"></marquee>
+      <marquee behavior="smooth" direction="left" scrollamount="25">SPREAD & REST OPERATOR ASSIGNMENT</marquee>
     </h1>
     <script src="./script.js"></script>
   </body>
