--- a/PRACTICE/CHALLENGES/DATA STRUCTURE CHALLENGES/CHALLENGE-2/index.html
+++ b/PRACTICE/CHALLENGES/DATA STRUCTURE CHALLENGES/CHALLENGE-2/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge-2</title>
+    <style>
+      h1 {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
+    <h1>Challenge-2</h1>
     <script src="./script.js"></script>
   </body>
 </html>
