--- a/PRACTICE/CHALLENGES/DATA STRUCTURE CHALLENGES/CHALLENGE-4/index.html
+++ b/PRACTICE/CHALLENGES/DATA STRUCTURE CHALLENGES/CHALLENGE-4/index.html
@@ -3,10 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Challenge-4</title>
+    <style>
+      .container {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+      }
+      .btn {
+        padding: 10px;
+        margin: 10px;
+        text-align: center;
+        font-size: 1rem;
+      }
+      .areatext {
+        align-items: center;
+        padding: 20px;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <h1>challenge-4</h1>
+    <div class="container">
+      <button class="btn">Click Me</button>
+
+      <textarea
+        class="areatext"
+        name="text"
+        placeholder=" Enter the given sentences:"
+      ></textarea>
+    </div>
 
     <script src="./script.js"></script>
   </body>
