complete update project

--- a/PRACTICE/CHALLENGES/DATA STRUCTURE CHALLENGES/CHALLENGE-4/index.html
+++ b/PRACTICE/CHALLENGES/DATA STRUCTURE CHALLENGES/CHALLENGE-4/index.html
@@ -3,37 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge-4</title>
-    <style>
-      .container {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-      }
-      .btn {
-        padding: 10px;
-        margin: 10px;
-        text-align: center;
-        font-size: 1rem;
-      }
-      .areatext {
-        align-items: center;
-        padding: 20px;
-        text-align: center;
-      }
-    </style>
+    <title>Coding Challenge 4</title>
   </head>
   <body>
-    <div class="container">
-      <button class="btn">Click Me</button>
-
-      <textarea
-        class="areatext"
-        name="text"
-        placeholder=" Enter the given sentences:"
-      ></textarea>
-    </div>
-
-    <script src="./script.js"></script>
+    <textarea id="textarea" rows="10" cols="30">
+underscore_case
+ first_name
+Some_Variable
+ calculate_AGE
+delayed_departure
+    </textarea>
+    <button class="convertBtn">Convert to camelCase</button>
+    <script src="script.js"></script>
   </body>
 </html>
