--- a/DailyPrep/index.html
+++ b/DailyPrep/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./script1.js"></script>
+    <button class="btn">Click me</button>
+    <div class="element" style="width: 1000px;">🐈</div>
+    <!-- <script src="./script1.js"></script> -->
+    <script src="./script2.js"></script>
   </body>
 </html>
