advance dom manipulation

--- a/DailyPrep/index.html
+++ b/DailyPrep/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .father1 {
+        background-color: blue;
+        width: 130px;
+      }
+      .father2 {
+        background-color: red;
+        width: 130px;
+      }
+      .btn{
+        font-size: 1.3rem;
+        width: 100px;
+        border: none;
+        color: white;
+        background-color: black;
+        padding: 10px;
+      }
+    </style>
   </head>
   <body>
-    <button class="btn">Click me</button>
-    <div class="element" style="width: 1000px;">🐈</div>
+    <!-- Part of script2 -->
+    <div class="father1">
+      <h2>Hello world</h2>
+    </div>
+
+    <!-- before/after elements -->
+    <div class="father2">
+      <h2>Hello world</h2>
+    </div>
+
+    <button class="btn">Click</button>
+
     <!-- <script src="./script1.js"></script> -->
     <script src="./script2.js"></script>
   </body>
