--- a/DailyPrep/Advance DOM/index.html
+++ b/DailyPrep/Advance DOM/index.html
@@ -4,24 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .father1 {
-        background-color: blue;
-        width: 130px;
-      }
-      .father2 {
-        background-color: red;
-        width: 130px;
-      }
-      .btn{
-        font-size: 1.3rem;
-        width: 100px;
-        border: none;
-        color: white;
-        background-color: black;
-        padding: 10px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Part of script2 -->
@@ -36,7 +19,13 @@
 
     <button class="btn">Click</button>
 
-    <!-- <script src="./script1.js"></script> -->
+    <div class="Color"></div>
+    <div class="Color"></div>
+    <div class="Color"></div>
+
+    <!-- Class- 188 number of course  -->
+
+    <!-- <script src="./script1.js"></script> -->`
     <script src="./script2.js"></script>
   </body>
 </html>
