--- a/CLASS/8. Advance DOM/starter/index.html
+++ b/CLASS/8. Advance DOM/starter/index.html
@@ -21,6 +21,8 @@
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
+          designer="Apurba"
+          data-version-number="1.1"
         />
         <ul class="nav__links">
           <li class="nav__item">
@@ -350,6 +352,6 @@
     </div>
     <div class="overlay hidden"></div>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
