--- a/CLASS/8. Advance DOM/2. Advance DOM/index.html
+++ b/CLASS/8. Advance DOM/2. Advance DOM/index.html
@@ -218,7 +218,7 @@
       </div>
 
       <div class="slider">
-        <div class="slide slide--1">
+        <!-- <div class="slide slide--1">
           <div class="testimonial">
             <h5 class="testimonial__header">Best financial decision ever!</h5>
             <blockquote class="testimonial__text">
@@ -229,6 +229,7 @@
               id alias reiciendis, perferendis facere pariatur dolore veniam
               autem esse non voluptatem saepe provident nihil molestiae.
             </blockquote>
+
             <address class="testimonial__author">
               <img src="img/user-1.jpg" alt="" class="testimonial__photo" />
               <h6 class="testimonial__name">Aarav Lynn</h6>
@@ -276,12 +277,12 @@
               <p class="testimonial__location">Lisbon, Portugal</p>
             </address>
           </div>
-        </div>
+        </div> -->
 
-        <!-- <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
+        <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
         <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
         <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
-        <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
+        <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div>
         <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
         <div class="dots"></div>
