completly Geolocation API

--- a/CLASS/10. Asynchronous ASYNC,AWAIT, AJAX/6. Geolocation API Promisify/index.html
+++ b/CLASS/10. Asynchronous ASYNC,AWAIT, AJAX/6. Geolocation API Promisify/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
+    <h2>GEOLOCATION API</h2>
+
+    <button id="buttonClick">click</button>
     <script src="./script.js"></script>
   </body>
 </html>
